service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptfd-app
  labels:
    app: ptfd-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8501
    protocol: TCP
    name: http
  selector:
    app: ptfd-app
