ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptfd-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
  - hosts:
    - dashboard.arcadiasmw.com
    secretName: dashboard-vamshi-tls
  rules:
  - host: dashboard.arcadiasmw.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ptfd-app
            port:
              number: 80
